Cloth Disk cache not being saved and being deleted on files that have been linked and library override enabled. #96930

Closed
opened 2022-03-31 22:11:24 +02:00 by Brad Clark · 7 comments
Member

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Quadro RTX 3000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.88

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e

Short description of error
Linked and library override on a cloth object deletes "Disk cache" when file is saved, leaving only the directory but no cache.
If you link and library override an object, then add cloth to it, the file cache stays.
The other issues are that the cache information isn't yet exposed for the library override system.

Exact steps for others to reproduce the error

  • Create object and add cloth modifier, save the file
  • Create a new file and link in the collection for the previous created cloth object
  • Make library override for collection
  • Save the file

Go to the cloth physics tab and under the cache settings turn on the Disk Cache check mark

Sim the mesh to create the cache, save the file.

Open the file and see that there are no frames on disk

image.png

You can then look at the cache folder on disk where your blender file was saved and see it is now empty.

Also the add and remove cache and rename the cache is not exposed to the override system, seeming like it was just overlooked when the cloth was added to the override system.

cloth problem example files.zip

example test files included
one file has a cube with cloth added, linked.
the second file has only a cube linked and then cloth was added after the link and library override.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Quadro RTX 3000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.88 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` **Short description of error** Linked and library override on a cloth object deletes "Disk cache" when file is saved, leaving only the directory but no cache. If you link and library override an object, then add cloth to it, the file cache stays. The other issues are that the cache information isn't yet exposed for the library override system. **Exact steps for others to reproduce the error** - Create object and add cloth modifier, save the file - Create a new file and link in the collection for the previous created cloth object - Make library override for collection - Save the file # Go to the cloth physics tab and under the cache settings turn on the Disk Cache check mark # Sim the mesh to create the cache, save the file. # Open the file and see that there are no frames on disk ![image.png](https://archive.blender.org/developer/F12960120/image.png) You can then look at the cache folder on disk where your blender file was saved and see it is now empty. Also the add and remove cache and rename the cache is not exposed to the override system, seeming like it was just overlooked when the cloth was added to the override system. [cloth problem example files.zip](https://archive.blender.org/developer/F12960123/cloth_problem_example_files.zip) example test files included one file has a cube with cloth added, linked. the second file has only a cube linked and then cloth was added after the link and library override.
Author
Member

Added subscriber: @BClark

Added subscriber: @BClark
Author
Member

One workaround is to make sure to turn on the Disk Cache setting on the cloth before linking in the file to have it keep the cache.

One workaround is to make sure to turn on the Disk Cache setting on the cloth before linking in the file to have it keep the cache.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Checking this with 3.2 version, I can't enable disk cache on overridden data, but I can confirm, that baking does not produce files. I am not 100% sure this was implemented aready though. From reading #82503 there is still limited support

Checking this with 3.2 version, I can't enable disk cache on overridden data, but I can confirm, that baking does not produce files. I am not 100% sure this was implemented aready though. From reading #82503 there is still limited support

This issue was referenced by b073f58a8e

This issue was referenced by b073f58a8e96ab3224c67550672a051e61a718e8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-04-01 12:46:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96930
No description provided.